syntax = "proto3";

package proto;

option go_package = "message";
option (gogoproto.stable_marshaler_all) = true;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

// PeerShard represents the data regarding a peer's shard
message PeerShard {
  string  ShardId = 1 [(gogoproto.jsontag) = "shardId"];
}
